[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.poetry]
name = "openlrc"
version = "1.6.1"
description = "Transcribe (whisper) and translate (gpt) voice into LRC file."
license = "MIT"
authors = [
    "Hao Zheng <zhenghaosustc@gmail.com>"
]
readme = "README.md"
homepage = "https://github.com/zh-plus/Open-Lyrics"
keywords = [
    'openai-gpt3',
    'whisper',
    'voice transcribe',
    'lrc'
]
classifiers = [
    'Programming Language :: Python :: 3',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering',
    'License :: OSI Approved :: MIT License',
    "Operating System :: OS Independent",
]
include = [
    { path = 'openlrc' },
]
exclude = [
    "openlrc/gui",
    "openlrc/gui_streamlit",
]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
openai = "^1.55.0"
anthropic = "^0.39.0"
tiktoken = "^0.8.0"
langcodes = "^3.3.0"
language-data = "^1.1"
tqdm = "^4.65.0"
audioread = "^3.0.0"
zhconv = "^1.4.3"
punctuators = "^0.0.5"
colorlog = "^6.7.0"
ffmpeg-python = "^0.2.0"
lingua-language-detector = "^1.3.2"
pandas = "^2.0.2"
filetype = "^1.2.0"
jaconvV2 = "^0.4"
spacy = "^3.7.0"
pysbd = "^0.3.4"
faster-whisper = { url = "https://github.com/SYSTRAN/faster-whisper/archive/8327d8cc647266ed66f6cd878cf97eccface7351.tar.gz" }
soundfile = "^0.12.1"
ffmpeg-normalize = "^1.27.5"
deepfilternet = "^0.5.6"
aiohttp = "^3.9.4"
ctranslate2 = "^4.5.0"
google-generativeai = "0.8.3"
json_repair = "0.25.2"
matplotlib = "^3.9.2"
typing-extensions = "^4.12.2"
onnxruntime = "^1.20.0"

#torch = ">=2.0.0, !=2.0.1"
#torchaudio = "^2.0.0"
#torchvision = "^0.17.1"
#torch = { version = "2.0.1", source = "torch" }
#torchaudio = { version = "2.0.2", source = "torch" }
#torchvision = { version = "0.15.2", source = "torch" }


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

#[[tool.poetry.source]]
#name = "torch"
#url = "https://download.pytorch.org/whl/nightly/cu117"
#priority = "supplemental"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/zh-plus/Open-Lyrics/issues"

[tool.poetry.scripts]
openlrc = "openlrc.cli:main"
